# stricker-matching

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: version-check.yml
apps/api/: pyproject.toml
apps/model/: Dockerfile  pyproject.toml
apps/model/src/stricker_matching_model/: logging.py  main.py
apps/model/src/stricker_matching_model/base/: feature_builder_context.py  training_context.py
apps/model/src/stricker_matching_model/core/: __init__.py  artifacts.py  facade.py  strategies.py
apps/model/src/stricker_matching_model/etl/: __init__.py  base.py  loader.py  reference_tables.py  statsbomb.py
apps/model/src/stricker_matching_model/features/: builder.py  plotting.py
apps/model/src/stricker_matching_model/inference/: predictor.py
apps/model/src/stricker_matching_model/pipeline/: builder.py
apps/model/src/stricker_matching_model/service/: api.py
apps/model/src/stricker_matching_model/train/: trainer.py
apps/model/tests/: test_artifacts.py  test_pipeline.py  test_training.py
apps/ui/: pyproject.toml
data/: matches.json  teams.json
data/raw/: competitions.json  players.json  positions.json
