[build-system]
requires = [
  "hatchling==1.29.0",
]
build-backend = "hatchling.build"

[project]
name = "stricker-matching-api"
description = "API service for striker matching."
requires-python = ">=3.12"
authors = [

  {name = "Lucas Laredo", email = "lucaslaredo@ufmg.br"},

]
maintainers = [

  {name = "Lucas Laredo", email = "lucaslaredo@ufmg.br"},

]

# Version is automatically bumped using commitizen
version = "0.1.0"

dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "httpx>=0.27",
]

[dependency-groups]
versioning = [
  "commitizen==4.13.9",
]

[tool.commitizen]
version = "0.1.0"
version_files = [
  "pyproject.toml",
  "src/stricker_matching_api/__init__.py",
]
update_changelog = false
