[build-system]
requires = [
  "hatchling==1.29.0",
]
build-backend = "hatchling.build"

[project]
name = "stricker-matching-model"
description = "Model service for striker clustering and inference."
requires-python = ">=3.12"
authors = [

  {name = "Lucas Laredo", email = "lucaslaredo@ufmg.br"},

]
maintainers = [

  {name = "Lucas Laredo", email = "lucaslaredo@ufmg.br"},

]

# Version is automatically bumped using commitizen
version = "0.1.0"

dependencies = [
  "scikit-learn==1.8.0",
  "pandas==2.3.3",
  "numpy==2.4.3",
  "joblib==1.5.3",
  "uvicorn==0.42.0",
  "pydantic==2.12.5",
  "fastapi==0.135.1",
]

[dependency-groups]
versioning = [
  "commitizen==4.13.9",
]
dev = [
  "tqdm==4.67.3",
]
viz = [
  "mplsoccer==1.6.1"
]


[tool.commitizen]
version = "0.1.0"
version_files = [
  "pyproject.toml",
  "src/stricker_matching_model/__init__.py",
]
update_changelog = false

